2019-04-28  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-10

       * [JSPWIKI-1107] Fixing XSS vulnerability in various plugins.

2019-04-28  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.11.0-M4-git-09

       * [JSPWIKI-1110] Upgrade bundled dependencies for 2.11.0.M4

       * generate aggregated javadocs for http://jspwiki.apache.org/apidocs/index.html

2019-04-27  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-08

       * [JSPWIKI-1107] fixing file-type vulnerability

       * Fixing consistency of the sidebar collapse in Upload.jsp

2019-04-25  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-07

       * [JSPWIKI-1107] uploading attachments with illegal filename causes XSS vulnerability
         Fixing file upload vulnerability.

2019-04-23  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-06

       * [JSPWIKI-1109] ReferredPagesPlugin with illegal characters in parameters
         causes XSS vulnerability

2019-04-23  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-05

       * [JSPWIKI-1108] interwiki links with illegal characters causes XSS vulnerability

       * [JSPWIKI-1107] uploading attachments with illegal filename causes XSS vulnerability
         Fixing side-effect on slimbox links, when rendering the caption with illegal characters.

2019-04-22  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-04

       * [JSPWIKI-1107] uploading attachments with illegal filename causes XSS vulnerability

2019-04-05  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-03

       * [JSPWIKI-1100] Add support for mixed css-class & css-style markup

2019-04-05  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-02

       * [JSPWIKI-1101] Improve rendering of {{{inline preformatted text}}}

       * Change UI for attachement upload: by default, the FILE SELECTION input should be visible
