@@ -172,6 +172,9 @@ jspwiki.attachmentProvider = BasicAttachmentProvider
 #  Example: Forbid HTML, PHP, ASP and EXE
 #jspwiki.attachment.forbidden=.html .htm .php .asp .exe
 
+# Example: Attachment links to HTML, HTM and MP3 files would force a download rather then opening the attachment
+#jspwiki.attachment.forceDownload= .html .htm
+
 #
 #  page Diff Representation
 #
